--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
