--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.29.0",
+    "prettier": "2.8.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
@@ -21,6 +22,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^3.19.1"
   }
 }
