--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "sequelize": "^6.26.0",
     "zod": "^3.19.1"
   }
 }
