--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/sequelize": "^4.28.14",
     "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
