--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "pg": "^8.8.0",
     "sequelize": "^6.26.0",
+    "socket.io": "^4.5.4",
     "zod": "^3.19.1"
   }
 }
