--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "ESNext",
     "module": "ESNext",
+    "target": "esnext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
