--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,.tsx src",
+    "prettier": "prettier --write src/**/*.{ts,tsx,json,css}"
   },
   "dependencies": {
     "react": "^18.2.0",
