--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
   CI:
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setupnode@v3
+        with: 
+          node-version: '19'
       - name: Lint frontend
         run: cd frontend/ && npm run lint
       - name: Lint backend
