--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,12 @@ jobs:
       - uses: actions/setupnode@v3
         with: 
           node-version: '19'
+      - name: npm install
+        run: cd frontend/ && npm install & cd backend/ && npm install
       - name: Lint frontend
         run: cd frontend/ && npm run lint
       - name: Lint backend
         run: cd backend/ && npm run lint
+      - name: test backend
+        run: cd backend/ && npm run test
       
