--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setupnode@v3
+      - uses: actions/setup-node@v3
         with: 
           node-version: '19'
       - name: npm install
