--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "npm run build && node dist/index.js",
     "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "lint": "eslint --ext .ts src/",
