Add functionality to create local dev db through docker

--- a/backend/.env.pub
+++ b/backend/.env.pub
@@ -1,6 +1,6 @@
 PORT=3001
-DB_HOST= ##Adress for the postgresdb, example: example-rds.cytbr08afwwn.eu-north-1.rds.amazonaws.com
-DB_PASSWORD=  ## Password for db connection, example: password123
-DB_PORT= ##Port number of the db, example: 5432
-DB_USERNAME= ##Username for db, example: username123
-DB_NAME= ##Name of the db, example: postgredb
+DB_HOST=127.0.0.1:5432 ##Adress for the postgresdb, example: example-rds.cytbr08afwwn.eu-north-1.rds.amazonaws.com
+DB_PASSWORD=db_password  ## Password for db connection, example: password123
+DB_PORT=5432 ##Port number of the db, example: 5432
+DB_USERNAME=postgres ##Username for db, example: username123
+DB_NAME=postgres ##Name of the db, example: postgredb
