--- a/backend/.env.pub
+++ b/backend/.env.pub
@@ -1,6 +1,6 @@
 PORT=3001
-DB_HOST=127.0.0.1:5432 ##Adress for the postgresdb, example: example-rds.cytbr08afwwn.eu-north-1.rds.amazonaws.com
-DB_PASSWORD=db_password  ## Password for db connection, example: password123
-DB_PORT=5432 ##Port number of the db, example: 5432
-DB_USERNAME=postgres ##Username for db, example: username123
-DB_NAME=postgres ##Name of the db, example: postgredb
+DB_HOST=127.0.0.1 ##Adress for the postgresdb 
+DB_PASSWORD=db_password  ## Password for db connection
+DB_PORT=5432 ##Port number of the db
+DB_USERNAME=postgres ##Username for db
+DB_NAME=postgres ##Name of the db
