--- a/backend/.env.pub
+++ b/backend/.env.pub
@@ -1,6 +1,6 @@
 PORT=3001
-DB_HOST=127.0.0.1 ##Adress for the postgresdb 
-DB_PASSWORD=db_password  ## Password for db connection
-DB_PORT=5432 ##Port number of the db
-DB_USERNAME=postgres ##Username for db
-DB_NAME=postgres ##Name of the db
+DB_HOST=127.0.0.1
+DB_PASSWORD=db_password
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_NAME=postgres
