Update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     ports:
       - '5432:5432'
 
-  backend:
+  app:
     build:
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     restart: always
     ports:
       - '3001:3001'
